<resources>
    <string name="app_name">Eataly</string>
    <string name="email">Insert Email</string>
    <string name="password">Insert Password</string>
    <string name="username">Insert Username</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="welcome">Benvenuto in Eataly</string>
    <string name="checkout">checkout</string>
    <string name="total">Total:</string>
    <string name="min_order">Importo Minimo</string>
    <string name="order_label">Riepilogo Ordine</string>
    <string name="pay_label">PAY</string>
    <string name="ok">Rimuovi</string>
    <string name="cancel">Annulla</string>
    <string name="wrong_password">Password Errata</string>
    <string name="wrong_email">Email Errata</string>
    <string name="correct_login">Login Corretto</string>
    <string name="profile">Profilo</string>
    <string name="login_error">Email o password errata</string>
    <string name="login_success">Login Corretto</string>
    <string name="register_correct">Registrazione corretta</string>
    <string name="logout">Logout</string>
</resources>
